# hermes-health

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  config.toml
docs/: SPEC.md
docs/wireframes/: 03-biomarker-detail.html  05-data-entry-interventions.html
hermes-health-handoff/: README.md  SPEC.md
hermes-health-handoff/wireframes/: 01-dashboard-desktop.html  02-dashboard-mobile.html  04-lab-import-review.html
migrations/: 001_init.sql  002_extraction_metadata.sql  003_imports_table.sql  004_import_overwrites.sql
src/: config.rs  error.rs  lib.rs  main.rs
src/agent/: extractor.rs  mod.rs  prompts.rs
src/agent/tools/: loinc_lookup.rs  mod.rs  submit_results.rs  think.rs  unit_convert.rs  validate_row.rs
src/cli/: mod.rs
src/db/: migrate.rs  mod.rs  models.rs  queries.rs
src/export/: csv_export.rs  mod.rs
src/ingest/: mod.rs  normalize.rs  units.rs
src/services/: biomarker.rs  conversions.rs  loinc.rs  mod.rs  observation.rs  seed.rs  trend.rs
src/web/: assets.rs  extraction_queue.rs  htmx.rs  mod.rs  routes.rs  templates.rs
src/web/handlers/: api.rs  biomarker.rs  dashboard.rs  intervention.rs  (+3 more)
templates/: base.html
templates/components/: attention_list.html  biomarker_autocomplete.html  chart.html  imports_list.html  improvements.html  interventions_sidebar.html  nav.html  review_table.html  summary_cards.html  timeline.html
templates/pages/: biomarker_detail.html  biomarkers_list.html  dashboard.html  data_entry.html  import.html  import_detail.html  intervention_detail.html  interventions.html  settings.html
tests/: integration_test.rs
(+2 files in other folders)
